--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(PPuRV-PROJECT)
+add_subdirectory(gcd)
 add_executable(${PROJECT_NAME} "main.c")
+target_link_libraries(${PROJECT_NAME} gcd)
