--- a/gcd/CMakeLists.txt
+++ b/gcd/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(gcd)
-add_library(${PROJECT_NAME} SHARED gcd.c gcd.h)
+add_library(${PROJECT_NAME} SHARED gcd.c)
